modal window format polls

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -7,6 +7,7 @@
 #root,
 #docs-root{
     --light-blue: rgba(73, 135, 247, 0.5);
+    --blue-1: rgba(73, 135, 247);
 }
 
 input::file-selector-button{
